test/files/pos/t11917/A.java
package foo;

public class A<T> {}