test/files/neg/t10260/A.java
public class A<T extends A<T>> {}

